<resources>

    <!--
    OTHER LOCALE (use english)
    -->

    <string name="app_name">mp3 Tag Edit</string>
    <string name="app_version">Version 0.2</string>
    <string name="file_extension">.mp3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Text for various buttons -->
    <string name="button_add">+</string>
    <string name="button_remove">-</string>

    <!-- Text for action menu -->
    <string name="action_change_queue">Delete songs from queue</string>
    <string name="action_add_to_queue">Add songs to queue</string>

    <!-- Text for rename files -->
    <string name="insert_pattern">Add pattern</string>
    <string name="default_pattern">%title%-%artist%</string>
    <string name="start_rename">Rename files</string>
    <string name="cancel_rename">Cancel rename</string>
    <string name="files_renamed"> files were renamed</string>
    <string name="rename_canceled"> file rename was canceled</string>

    <!-- Text for the tags (fields) -->
    <string name="tagedit_artists">Artist</string>
    <string name="tagedit_album">Album</string>
    <string name="tagedit_album_artist">Album artist</string>
    <string name="tagedit_genres">Genre</string>
    <string name="tagedit_title">Title</string>
    <string name="tagedit_year">Publishing year</string>
    <string name="tagedit_track">Track number</string>
    <string name="tagedit_comment">Comment</string>

    <!-- Text for the music player (buttons) -->
    <string name="player_play">Play</string>
    <string name="player_stop">Pause</string>

    <!-- Text for file handling -->
    <string name="file_open">Open</string>
    <string name="file_close">Close</string>
    <string name="file_save">Save</string>
    <string name="file_undo">Undo</string>

    <!-- Text for navigation -->
    <string name="nav_forward">Forward</string>
    <string name="nav_backward">Backward</string>

    <!-- Text for Welcome Screen -->
    <string name="welcome_message">Welcome to mp3TagEdit</string>

    <!-- Text for Help page -->
    <string name="placeholder">placeholder</string>

    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="settings">Options</string>
    <string name="id3v24edit">id3v2.4 Editor</string>
    <string name="id3v23edit">id3v2.3 Editor</string>
    <string name="tagtofile">Tag-to-File</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="title_activity_settings">settings</string>
    <string name="title_activity_help">help</string>


    <!-- Strings for the help page -->
    <string name="chapter1title">1. General</string>
    <string name="chapter1"><b>mp3TagEdit</b> is an easy-to-use app to edit and convert the metadata of mp3-files. It can edit 2 different versions of tags, <i>id3v2.3</i> and <i>id3v2.4</i>. Those are distinguished by how many tags can be set per field.\n
Whilst the newer version supports multiple tags, most systems are designed to work with id3v2.3 tags and cannot display multiple information.</string>

    <string name="chapter2title">2. First Steps</string>
    <string name="chapter2">When starting one of the editors you will be presented with a queue in which the soon to be edited files will be listed. You can add complete folders or simply files. After setting up this queue you can start editing.</string>

    <string name="chapter3title">3. The Editor</string>
    <string name="chapter3">The Editor has a simple layout. On the top is a header containing information about the Cover and Title you are currently working on as well as buttons to play the current song, share the edited file and to manually save.\n
The save button however is not needed all the time as the app automatically saves whenever another file in queue is edited. \n
By clicking on the <b>artwork</b> on the header a new selection pops up and there are different options available: \n
\u2022 <b>Camera</b> \n
\u2022 <b>Gallery</b> \n
\u2022 <b>Generator</b></string>

    <string name="chapter31title">3.1. The Cover Generator</string>
    <string name="chapter31">This function gives you the option to define a pattern using xml and generates covers from the information stored in the tags of a given mp3-file.</string>

    <string name="chapter4title">4. The Tag to File Converter</string>
    <string name="chapter4">This option in the menu is used to betetr organize your mp3-files on your phone by giving them names according to their tags. This can be applied to all mp3-files on your phone or to a selection of files.
The pattern which the files get renamed after is defined in the settings with following possible attributes: \n
        \u2022 <b>%title%</b> - Title\n
        \u2022 <b>%year%</b> - Year\n
\u2022 <b>%artist%</b> - Artist\n
\u2022 <b>%track%</b> - Track number\n
\u2022 <b>%album%</b> - Album name\n
\u2022 <b>%genre%</b> - Genre</string>

    <string name="creditstitle">Credits</string>
    <string name="credits">This App was created by <b>Vincent Adam</b>, <b>Andre Berthold</b> and <b>Christian Gärber</b>.</string>

    <string name="title_activity_album_cover">Album Cover</string>
    <string name="title_camera">Camera</string>
    <string name="title_generate">Generate</string>
    <string name="title_gallery">Gallery</string>
    <string name="CoverImageView_description">Album Cover</string>
    <string name="title_activity_cover_generation">CoverGenerationActivity</string>

    <string name="share">Share using...</string>
    <string name="share_error">No file selected.</string>

    <string name="save_complete">The Tags were saved.</string>

    <string name="files_added"> files added</string>
    <string name="files_removed"> files got removed from the list</string>

    <string name="resume23">Resume v23</string>
    <string name="resume24">Resume v24</string>

    <string name="resume_failed">Resuming Failed!</string>


    <!-- ________________________________________________________________________ -->
    <string name="list_reached_max">The queue reached its maximum number of elements!</string>
    <string name="list_not_initialized">The queue is not yet initialized.</string>
</resources>
