<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mp3tagedit.de.main.tagtofile">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:background="@drawable/bg2blurred"/>

    <RelativeLayout
        android:id="@+id/actionbar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp">

        <RelativeLayout
            android:id="@+id/open_drawer_layout"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_width="50dp"
            android:layout_height="50dp">

            <Button
                android:id="@+id/open_drawer"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/activity_title"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/defaultText"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/open_options_layout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_width="50dp"
            android:layout_height="50dp">

        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/actionbar">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/helpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/whiteSeeThrough">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/defaultText"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/chapter4title"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/defaultText"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/chapter4"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/helpText"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/tv_insert_pattern"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/insert_pattern"
                    android:textColor="@color/defaultText"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/patternIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:inputType="textImeMultiLine"
                    android:text="@string/default_pattern" />

                <Button
                    android:id="@+id/addToQueue"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="10"
                    android:background="@drawable/white_rectangle"
                    android:text="@string/action_add_to_queue"
                    android:textColor="@color/defaultText"
                    android:theme="@style/Button.Add" />

                <Button
                    android:id="@+id/changeQueue"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="10"
                    android:background="@drawable/white_rectangle"
                    android:text="@string/action_change_queue"
                    android:textColor="@color/defaultText"
                    android:theme="@style/Button.Add" />

                <Button
                    android:id="@+id/startRename"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="10"
                    android:background="@drawable/white_rectangle"
                    android:text="@string/start_rename"
                    android:textColor="@color/defaultText"
                    android:theme="@style/Button.Add" />

                <Button
                    android:id="@+id/cancelRename"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="10"
                    android:background="@drawable/white_rectangle"
                    android:text="@string/cancel_rename"
                    android:textColor="@color/defaultText"
                    android:theme="@style/Button.Add" />

            </LinearLayout>


        </RelativeLayout>
    </ScrollView>



</android.widget.RelativeLayout>
