<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/colorSecondary">

        <LinearLayout
            android:id="@+id/appbarContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">

                <ImageButton
                    android:id="@+id/coverArt"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:srcCompat="@drawable/ic_menu_gallery"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintDimensionRatio="1:1" />

            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textStyle="bold"
                    android:text="@string/tagedit_title"
                    android:textSize="10pt"
                    android:textColor="@color/lightText" />

                <EditText
                    android:id="@+id/titelIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/lightText"
                    android:ems="10"
                    android:inputType="textImeMultiLine"
                    android:text=""
                    android:shadowColor="@color/colorPrimary"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/play"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/player_play"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:theme="@style/Button.Add"
                        android:textColor="@color/lightText" />

                    <Button
                        android:id="@+id/save"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/file_save"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:theme="@style/Button.Add"
                        android:textColor="@color/lightText" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="413dp"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="7dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <!--
            Album
            Artist
            Comment (auto generated, hidden)
            Track
            TotalTracks
            Genre
            -->
            <TextView
                android:id="@+id/album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="1.5"
                android:text="@string/tagedit_album"
                android:textColor="@color/defaultText" />

            <EditText
                android:id="@+id/albumIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:ems="10"
                android:inputType="textImeMultiLine"
                android:text="" />

            <TextView
                android:id="@+id/artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="1.5"
                android:text="@string/tagedit_artists"
                android:textColor="@color/defaultText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/artistIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textImeMultiLine"
                    android:text="" />

                <Button
                    android:id="@+id/addArtist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:onClick="onClick"
                    android:text="@string/button_add"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:theme="@style/Button.Add"
                    android:textColor="@color/lightText"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="1.5"
                android:text="@string/tagedit_genres"
                android:textColor="@color/defaultText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/genreIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textImeMultiLine"
                    android:text="" />

                <Button
                    android:id="@+id/addGenre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:text="@string/button_add"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:theme="@style/Button.Add"
                    android:textColor="@color/lightText"
                    />

                <!--
                add this button type in all added lines
                 <Button
                    android:id="@+id/delGenre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text="-" />
                -->
            </LinearLayout>


        </LinearLayout>
        <!--</ScrollView>
    </LinearLayout>-->
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>